--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# CMake files
 build
 sdkconfig
 CMakeLists.txt.user
@@ -11,3 +12,6 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+
+# CCLS
+.ccls-cache
